# march

./: .gitignore  LICENSE  README.md
backend/: .pylintrc  Dockerfile  README.md  pyproject.toml
backend/march_backend/: main.py
backend/src/march_backend/: auth.py  main.py
backend/src/march_backend/mail/: base.py  gmail.py
backend/tests/: test_auth.py  test_secret.json
backend/tests/mail/: test_base.py  test_gmail.py
deployment/: .gitignore  march.tf
frontend/: jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.common.ts  webpack.dev.ts
frontend/src/: App.js  App.tsx  index.html
frontend/src/components/: email.tsx  error-catcher.tsx  navbar.tsx  search.js  search.tsx
frontend/src/contexts/: auth-context.tsx  message-context.tsx
frontend/src/pages/: home.js  home.tsx
frontend/src/services/: firebase-service.js  gmail-service.js
frontend2/: .eslintrc.json  package-lock.json  package.json  tsconfig.json  webpack.common.ts  webpack.config.js  webpack.prod.ts
frontend2/src/: App.tsx  index.html  index.tsx
frontend2/src/components/: email-list.tsx  search.tsx
frontend2/src/contexts/: results-context.tsx
frontend2/src/pages/: home.tsx
frontend2/src/semantic-ui/: theme.config
frontend2/src/services/: firebase-service.ts  gmail-service.test.ts  gmail-service.ts
