[tool.poetry]
name = "march-backend"
version = "0.1.0"
description = "Backend for the Mail Archiver tool"
authors = ["Dolf Andringa <dolfandringa@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "march_backend"}]

[tool.poetry.scripts]
dev = 'march_backend.main:start'
[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.94.0"
uvicorn = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pyright = "^1.1.298"
pylint = "^2.17.0"
pytest-mock = "^3.10.0"
mock = "^5.0.1"
pytest-pylint = "^0.19.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.2.2"

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.EXCPETIONS]
overgeneral-exceptions="builtins.BaseException, builtins.Exception"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
